1st/00003/manual/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsc2026-book-deploy
  namespace: wsc2026
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wsc2026-book
  template:
    metadata:
      labels:
        app: wsc2026-book
    spec:
      serviceAccountName: wsc2026-book-sa
      
      nodeSelector:
        wsc2026/node: application

      tolerations:
        - key: "wsc2026/node"
          operator: "Equal"
          value: "application"
          effect: "NoSchedule"
      
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: wsc2026-book

      containers:
        - name: book-app
          image: 000000000000.dkr.ecr.ap-northeast-2.amazonaws.com/wsc2026-book-ecr:v1.0.0
          ports:
            - containerPort: 8080
          
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"

          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 10
            periodSeconds: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
