1st/00003/manual/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsc2026-book-svc
  namespace: wsc2026
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  type: NodePort
  selector:
    app: wsc2026-book
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
